Commit last version