@@ -63,7 +63,7 @@ public class StringAnalyzer3 {
     
     protected Construct getConstruct() {
         if (construct == null && !constructs.isEmpty())
-            construct = constructs.getLast();
+            construct = constructs.get(constructs.size() - 1);
         if (construct == null)
             construct = new Construct();
         return construct;
@@ -106,7 +106,7 @@ public class StringAnalyzer3 {
 
         private Token nextToken() {
             if (!nextTokens.getData1d().isEmpty()) {
-                return nextTokens.getData1d().getFirst();
+                return nextTokens.getData1d().get(0);
             }
             return null;
         }
@@ -272,7 +272,7 @@ public class StringAnalyzer3 {
         }
 
         public Construct getFirstConstructVersion() {
-            return clones().getFirst();
+            return clones().get(0);
         }
     }
 
@@ -1585,10 +1585,10 @@ public class StringAnalyzer3 {
                 currentInstructions = new ArrayList<>();
                 currentInstructions.add(new InstructionBlock());
             }
-            if (currentInstructions.isEmpty() || currentInstructions.getLast() == null) {
+            if (currentInstructions.isEmpty() || currentInstructions.get(currentInstructions.size() - 1) == null) {
                 currentInstructions.add(new InstructionBlock());
             }
-            return currentInstructions.getLast();
+            return currentInstructions.get(currentInstructions.size() - 1);
         }
 
         public void setCurrentInstructions(InstructionBlock instructionBlock) {
